Remove unneded modules from import. Deal with unique main folder instead of two

--- a/fakeDB/fakeData_02_studentTable.ipynb
+++ b/fakeDB/fakeData_02_studentTable.ipynb
@@ -30,7 +30,6 @@
    "outputs": [],
    "source": [
     "from faker import Faker\n",
-    "from faker.providers import DynamicProvider\n",
     "from random import randint, sample\n",
     "import datetime\n",
     "import csv"
@@ -42,7 +41,7 @@
    "metadata": {},
    "source": [
     "<h3>\n",
-    "Define main path of the project (Windows/Mac)\n",
+    "Define main path of the project (Windows/Mac) where the notebooks are located\n",
     "</h3>"
    ]
   },
@@ -53,9 +52,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Main path where the notebooks are located (Windows path and Mac path)\n",
-    "winPath = 'C:/Users/mzlarosa/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'\n",
-    "macPath = '/Users/mau/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'"
+    "# Windows\n",
+    "#path = 'C:/Users/mzlarosa/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'\n",
+    "\n",
+    "# Mac\n",
+    "path = '/Users/mau/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'"
    ]
   },
   {
@@ -420,8 +421,7 @@
    "outputs": [],
    "source": [
     "# save student table to csv file\n",
-    "#with open(winPath + 'tables/studentTable.csv', 'w', newline = '', encoding = 'UTF-16') as csvfile:\n",
-    "with open(macPath + 'tables/studentTable.csv', 'w', newline = '', encoding = 'UTF-16') as csvfile:\n",
+    "with open(path + 'tables/studentTable.csv', 'w', newline = '', encoding = 'UTF-16') as csvfile:\n",
     "    writer = csv.writer(csvfile)\n",
     "    keys = studentDict.keys()\n",
     "    limit = len(studentDict['studentID'])\n",
