--- a/fakeDB/fakeData_03_instructorTable.ipynb
+++ b/fakeDB/fakeData_03_instructorTable.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "source": [
     "<h3>\n",
-    "Define main path of the project (Windows/Mac)\n",
+    "Define main path of the project (Windows/Mac) where the notebooks are located\n",
     "</h3>"
    ]
   },
@@ -53,9 +53,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Main path where the notebooks are located (Windows path and Mac path)\n",
-    "winPath = 'C:/Users/mzlarosa/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'\n",
-    "macPath = '/Users/mau/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'"
+    "# Windows\n",
+    "#path = 'C:/Users/mzlarosa/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'\n",
+    "\n",
+    "# Mac\n",
+    "path = '/Users/mau/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'"
    ]
   },
   {
@@ -312,8 +314,7 @@
    "outputs": [],
    "source": [
     "# save instructor table to csv file\n",
-    "#with open(winPath + 'tables/instructorTable.csv', 'w', newline = '', encoding = 'UTF-16') as csvfile:\n",
-    "with open(macPath + 'tables/instructorTable.csv', 'w', newline = '', encoding = 'UTF-16') as csvfile:\n",
+    "with open(path + 'tables/instructorTable.csv', 'w', newline = '', encoding = 'UTF-16') as csvfile:\n",
     "    writer = csv.writer(csvfile)\n",
     "    keys = instructorDict.keys()\n",
     "    limit = len(instructorDict['instructorID'])\n",
