--- a/fakeDB/fakeData_04_courseTable.ipynb
+++ b/fakeDB/fakeData_04_courseTable.ipynb
@@ -29,11 +29,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt\n",
-    "from faker import Faker\n",
-    "from faker.providers import DynamicProvider\n",
-    "from random import randint, sample\n",
-    "import datetime\n",
     "import csv"
    ]
   },
@@ -43,7 +38,7 @@
    "metadata": {},
    "source": [
     "<h3>\n",
-    "Define main path of the project (Windows/Mac)\n",
+    "Define main path of the project (Windows/Mac) where the notebooks are located\n",
     "</h3>"
    ]
   },
@@ -54,9 +49,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Main path where the notebooks are located (Windows path and Mac path)\n",
-    "winPath = 'C:/Users/mzlarosa/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'\n",
-    "macPath = '/Users/mau/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'"
+    "# Windows\n",
+    "#path = 'C:/Users/mzlarosa/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'\n",
+    "\n",
+    "# Mac\n",
+    "path = '/Users/mau/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'"
    ]
   },
   {
@@ -111,8 +108,7 @@
    "source": [
     "# select file where each line correspond to a course name and store course names into a list\n",
     "courseList = list()\n",
-    "#with open(winPath + 'sources/coursesOK.txt') as courses:\n",
-    "with open(MacPath + 'sources/coursesOK.txt') as courses:\n",
+    "with open(path + 'sources/coursesOK.txt') as courses:\n",
     "    for line in courses:\n",
     "        line = line.split('\\n')\n",
     "        courseList.append(line[0])\n",
@@ -149,8 +145,7 @@
    "source": [
     "# same as above for course categories\n",
     "categoryList = list()\n",
-    "#with open(winPath + 'sources/courseCategoriesOK.txt') as categories:\n",
-    "with open(macPath + 'sources/courseCategoriesOK.txt') as categories:\n",
+    "with open(path + 'sources/courseCategoriesOK.txt') as categories:\n",
     "    for line in categories:\n",
     "        line = line.split('\\n')\n",
     "        categoryList.append(line[0])\n",
@@ -376,8 +371,7 @@
    "outputs": [],
    "source": [
     "# save courses table to csv file\n",
-    "#with open(winPath + 'tables/coursesTable.csv', 'w', newline = '', encoding = 'UTF-16') as csvfile:\n",
-    "with open(macPath + 'tables/coursesTable.csv', 'w', newline = '', encoding = 'UTF-16') as csvfile:\n",
+    "with open(path + 'tables/coursesTable.csv', 'w', newline = '', encoding = 'UTF-16') as csvfile:\n",
     "    writer = csv.writer(csvfile)\n",
     "    keys = courseDict.keys()\n",
     "    limit = len(courseDict['courseID'])\n",
