--- a/fakeDB/fakeData_05_assessmentTable.ipynb
+++ b/fakeDB/fakeData_05_assessmentTable.ipynb
@@ -29,10 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from faker import Faker\n",
-    "from faker.providers import DynamicProvider\n",
     "from random import randint, sample\n",
-    "import datetime\n",
     "import csv"
    ]
   },
@@ -42,7 +39,7 @@
    "metadata": {},
    "source": [
     "<h3>\n",
-    "Define main path of the project (Windows/Mac)\n",
+    "Define main path of the project (Windows/Mac) where the notebooks are located\n",
     "</h3>"
    ]
   },
@@ -53,9 +50,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Main path where the notebooks are located (Windows path and Mac path)\n",
-    "winPath = 'C:/Users/mzlarosa/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'\n",
-    "macPath = '/Users/mau/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'"
+    "# Windows\n",
+    "#path = 'C:/Users/mzlarosa/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'\n",
+    "\n",
+    "# Mac\n",
+    "path = '/Users/mau/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/'"
    ]
   },
   {
@@ -104,8 +103,7 @@
     "courseList = list()\n",
     "courseDict = dict()\n",
     "key = 0\n",
-    "#with open(winPath + 'tables/coursesTable.csv') as csvCourses:\n",
-    "with open(macPath + 'tables/coursesTable.csv', newline = '', encoding = 'UTF-16') as csvCourses:\n",
+    "with open(path + 'tables/coursesTable.csv', newline = '', encoding = 'UTF-16') as csvCourses:\n",
     "    reader = csv.reader(csvCourses, delimiter = ',')\n",
     "    for line in reader:\n",
     "        courseDict[key] = line\n",
@@ -383,8 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with open(winPath + 'tables/assessmentTable.csv', 'w', newline = '') as csvfile:\n",
-    "with open(macPath + 'tables/assessmentTable.csv', 'w', newline = '') as csvfile:\n",
+    "with open(path + 'tables/assessmentTable.csv', 'w', newline = '') as csvfile:\n",
     "    writer = csv.writer(csvfile)\n",
     "    keys = assessmentDict.keys()\n",
     "    limit = len(assessmentDict['assessmentID'])\n",
@@ -419,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
